--- a/Andhra.html
+++ b/Andhra.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,34 +12,86 @@
 
 </head>
 <header class="nav-bar">
-    <span>
-        <a href="./index.html"> <h1>Explore India</h1></a>
-    </span>
     <nav>
-        <a id="nav-item" href="./About.html">About</a>
-        <a id="nav-item" href="#contact">Contact</a>
-        <a id="nav-item" href="./index.html">Home</a>
+        <a href="./index.html" id="toplogo">
+            <h1>Explore India</h1>
+        </a>
+        <div class="hamIcon">
+            <h1 id="toggle-bar">&#9776;</h1>
+        </div>
+        <ul class="menu-item">
+            <li><a class="nav-item" href="./About.html">About</a></li>
+            <li><a class="nav-item" href="#contact">Contact</a></li>
+            <li><a class="nav-item" href="./index.html">Home</a></li>
+        </ul>
     </nav>
 </header>
+
 <body>
     <div>
-        <img class="image" src="./AP.jpg" >
+        <img class="image" src="./AP.jpg">
+        <h2>ANDHRA PRADESH</h2>
         <p class="text-wrap">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium quaerat repellat molestias expedita culpa doloremque eaque provident explicabo asperiores incidunt minus, magnam beatae repudiandae praesentium rem voluptatem. Odit nesciunt ducimus deserunt illo dolorum rerum aliquid?
+            Andhra Pradesh, the fifth largest state of India is spread over an area of 275,068 sq. km. Situated on the
+            Deccan plateau, the state is bordered by Tamil Nadu on the south, Karnataka on the west, Maharashtra on the
+            north and northwest, Madhya Pradesh and Orissa on the northeast, and the Bay of Bengal on the east. Andhra
+            Pradesh India is known for its glorious past. The ancient temples, monuments, forts, palaces, old markets
+            are the testimony to its rich history, culture and architecture. There are many sacred pilgrimage shrines in
+            Andhra Pradesh of which Tirumala and Puttaparthi are visited by millions of devotees from all across the
+            world. Andhra Pradesh is blessed with breathtaking natural beauty. Surrounded by misty hills, dense forests,
+            undulating mountains, silvery cascades, and shimmering rivers, Andhra Pradesh is home to many famous hill
+            stations, wild life sanctuaries, national parks and, virgin beaches.<br><br>
+
+            Capital: - Amravati<br><br>
+            Top places to visit in Andhra Pradesh: -<br><br>
+            Tirupati<br>
+            Visakhapatnam<br>
+            Vijayawada<br>
+            Chittoor<br>
+            Nellore<br>
+            Srisailam<br>
+            Guntur<br>
+            Srikakulam<br><br>
+
+            Top recreational activities to explore in Andhra Pradesh: -<br><br>
+            Tirumala Temple<br>
+            Borra Caves<br>
+            INS Kurusura Submarine Museum<br>
+            Rishikonda Beach visit<br>
+            Belum Caves<br>
+            Gandikota Fort visit<br>
+            Pulicat Lake<br>
+            Araku valley<br><br>
+
         </p>
     </div>
+    <script>
+        function toggleMenu() {
+            let getMenu = document.querySelector(".menu-item");
+            getMenu.classList.toggle("hamburger");
+        }
+
+        let getHamburger = document.querySelector("#toggle-bar");
+
+        getHamburger.addEventListener("click", toggleMenu);
+    </script>
 </body>
 
 <footer>
 
     <div id="contact" class="bottom">
         <ul>
-            <li class="facebook"><a href="https://www.facebook.com/ankitraj.srivastava.710/"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-            <li class="instagram"><a href="https://www.instagram.com/awesome_ars/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-            <li class="github"><a href="https://github.com/Ankit-0212"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
-            <li class="linkedin"><a href="https://www.linkedin.com/in/ankit-raj-srivastava-1a93241a0"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/ankitraj.srivastava.710/"><i
+                        class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+            <li class="instagram"><a href="https://www.instagram.com/awesome_ars/"><i class="fa fa-instagram fa-2x"
+                        aria-hidden="true"></i></a></li>
+            <li class="github"><a href="https://github.com/Ankit-0212"><i class="fa fa-github fa-2x"
+                        aria-hidden="true"></i></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/in/ankit-raj-srivastava-1a93241a0"><i
+                        class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
             <p id="bottom-text">Designed by :- Ankit Raj Srivastava</p>
         </ul>
     </div>
 </footer>
+
 </html>
