--- a/Jharkhand.html
+++ b/Jharkhand.html
@@ -9,22 +9,60 @@
     <title>Jharkhand</title>
 </head>
 <header class="nav-bar">
-    <span>
-        <a href="./index.html"> <h1>Explore India</h1></a>
-    </span>
     <nav>
-        <a id="nav-item" href="./About.html">About</a>
-        <a id="nav-item" href="#contact">Contact</a>
-        <a id="nav-item" href="./index.html">Home</a>
+        <a href="./index.html" id="toplogo">
+            <h1>Explore India</h1>
+        </a>
+        <div class="hamIcon">
+            <h1 id="toggle-bar">&#9776;</h1>
+        </div>
+        <ul class="menu-item">
+            <li><a class="nav-item" href="./About.html">About</a></li>
+            <li><a class="nav-item" href="#contact">Contact</a></li>
+            <li><a class="nav-item" href="./index.html">Home</a></li>
+        </ul>
     </nav>
 </header>
+
 <body>
     <div>
         <img class="image" src="./Jharkhand.jpg" >
+        <h2>JHARKHAND</h2>
         <p class="text-wrap">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium quaerat repellat molestias expedita culpa doloremque eaque provident explicabo asperiores incidunt minus, magnam beatae repudiandae praesentium rem voluptatem. Odit nesciunt ducimus deserunt illo dolorum rerum aliquid?
+            Located in the eastern part of India, Jharkhand is blessed with lush green forests, lofty hills, sparkling waterfalls, several wildlife sanctuaries, and a treasure trove of mineral reserves. It has many revered places of worship too, which make it an attractive destination for not just tourists but pilgrims as well.<br><br>
+            While the mining of natural resources is the backbone of Jharkhand’s economy, the tourism sector also plays a remarkable role in its economic growth. According to the Indian Brand Equity Foundation, 33.56 million tourists visited the state in the year 2016. From premier hotels to budget properties, you can find all kinds of accommodation options in Jharkhand.<br><br>
+            Capital: - Ranchi<br><br>
+            Top places to explore in Jharkhand: -<br><br>
+            Ranchi<br>
+            Jamshedpur<br>
+            Hazaribagh<br>
+            Deoghar<br>
+            Giridih<br>
+            Sahibganj<br>
+            Dhanbad<br>
+            Bokaro<br>
+            Netarhat<br><br>
+            Top recreational activities to explore in Jharkhand: -<br><br>
+            Baba Bidyanath Temple<br>
+            Jagannath Temple<br>
+            Dimna Lake <br>
+            Maithon Dam <br>
+            Hundru Falls<br>
+            Netharhat<br><br>
+            
+            
         </p>
     </div>
+    <script>
+        function toggleMenu() {
+            let getMenu = document.querySelector(".menu-item");
+            getMenu.classList.toggle("hamburger");
+        }
+
+        let getHamburger = document.querySelector("#toggle-bar");
+
+        getHamburger.addEventListener("click", toggleMenu);
+    </script>
 </body>
 
 <footer>
