--- a/Pudducherry.html
+++ b/Pudducherry.html
@@ -1,42 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="webpagestyle.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Pudducherry</title>
 </head>
 <header class="nav-bar">
-    <span>
-        <a href="./index.html"> <h1>Explore India</h1></a>
-    </span>
     <nav>
-        <a id="nav-item" href="./About.html">About</a>
-        <a id="nav-item" href="#contact">Contact</a>
-        <a id="nav-item" href="./index.html">Home</a>
+        <a href="./index.html" id="toplogo">
+            <h1>Explore India</h1>
+        </a>
+        <div class="hamIcon">
+            <h1 id="toggle-bar">&#9776;</h1>
+        </div>
+        <ul class="menu-item">
+            <li><a class="nav-item" href="./About.html">About</a></li>
+            <li><a class="nav-item" href="#contact">Contact</a></li>
+            <li><a class="nav-item" href="./index.html">Home</a></li>
+        </ul>
     </nav>
 </header>
+
 <body>
     <div>
         <img class="image" src="./Pondicherry.jpg">
+        <h2>PUDUCHERRY</h2>
         <p class="text-wrap">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium quaerat repellat molestias expedita culpa doloremque eaque provident explicabo asperiores incidunt minus, magnam beatae repudiandae praesentium rem voluptatem. Odit nesciunt ducimus deserunt illo dolorum rerum aliquid?
+            Paradise Beach, Sri Aurobindo Ashram, Auroville, Serenity Beach, Arikamedu, Auroville Beach, Basilica of the
+            Sacred Heart of Jesus, Rock Beach, Ousteri Lake, VaradarajaPerumal Temple, Ousteri Wetland and National
+            Park, Meeran Mosque, Ananda Ranga Pillai Mansion, etc. <br><br>
+
+            These places in Pondicherry are known for preserving the remnants of French heritage with Indian culture and
+            offering a jolly good time to tourists. From its beaches to historical monuments and from its temples to
+            churches, Pondicherry is an interesting tourist destination in India. The laid-back charm of Pondicherry is
+            clearly visible when you visit the quaint French part of the town while tourists will also cherish the
+            authentic Indian feel that the city brings through its culture and people.
+            <br><br>
+
+            For nature lovers too, Pondicherry is a serene retreat replete with various beaches and lakes that takes the
+            breath away of the tourists on the first glimpse. Along with that, Pondicherry is a great place for shopping
+            lovers and foodies alike. With so many unique and exciting list of places to see in Pondicherry, it is
+            probably a dilemma for all the tourists where to go and not to do in such a short time. <br><br>
+            Capital: - Puducherry<br><br>
+            Top places to visit in Puducherry: -<br><br>
+            Auroville<br>
+
+
+            Promenade<br>
+
+            Arikamedu<br><br>
+
+            Top recreational activities in Puducherry: -<br>
+            <br>
+
+            Surfing<br>
+
+            Scuba diving<br>
+
+            Aurobindo Ashram<br>
+
+
+            Paradise Beach<br>
+
+
+            The Basilica of the Sacred Heart of Jesus<br>
+
+
+            The Pondicherry Botanical Garden <br>
+
+            Old Lighthouse<br>
+
+
+            Jawahar Toy Museum<br>
+
+            French War Memorial<br>
+
+
+            Immaculate Conception Cathedral<br>
+
+
+            Kanniga Parameswari Temple<br>
+            Rock Beach<br><br>
+
         </p>
     </div>
+    <script>
+        function toggleMenu() {
+            let getMenu = document.querySelector(".menu-item");
+            getMenu.classList.toggle("hamburger");
+        }
+
+        let getHamburger = document.querySelector("#toggle-bar");
+
+        getHamburger.addEventListener("click", toggleMenu);
+    </script>
 </body>
 
 <footer>
 
     <div id="contact" class="bottom">
         <ul>
-            <li class="facebook"><a href="https://www.facebook.com/ankitraj.srivastava.710/"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-            <li class="instagram"><a href="https://www.instagram.com/awesome_ars/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-            <li class="github"><a href="https://github.com/Ankit-0212"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
-            <li class="linkedin"><a href="https://www.linkedin.com/in/ankit-raj-srivastava-1a93241a0"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/ankitraj.srivastava.710/"><i
+                        class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+            <li class="instagram"><a href="https://www.instagram.com/awesome_ars/"><i class="fa fa-instagram fa-2x"
+                        aria-hidden="true"></i></a></li>
+            <li class="github"><a href="https://github.com/Ankit-0212"><i class="fa fa-github fa-2x"
+                        aria-hidden="true"></i></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/in/ankit-raj-srivastava-1a93241a0"><i
+                        class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
             <p id="bottom-text">Designed by :- Ankit Raj Srivastava</p>
         </ul>
     </div>
 </footer>
+
 </html>
