--- a/Tripura.html
+++ b/Tripura.html
@@ -9,22 +9,54 @@
     <title>Tripura</title>
 </head>
 <header class="nav-bar">
-    <span>
-        <a href="./index.html"> <h1>Explore India</h1></a>
-    </span>
     <nav>
-        <a id="nav-item" href="./About.html">About</a>
-        <a id="nav-item" href="#contact">Contact</a>
-        <a id="nav-item" href="./index.html">Home</a>
+        <a href="./index.html" id="toplogo">
+            <h1>Explore India</h1>
+        </a>
+        <div class="hamIcon">
+            <h1 id="toggle-bar">&#9776;</h1>
+        </div>
+        <ul class="menu-item">
+            <li><a class="nav-item" href="./About.html">About</a></li>
+            <li><a class="nav-item" href="#contact">Contact</a></li>
+            <li><a class="nav-item" href="./index.html">Home</a></li>
+        </ul>
     </nav>
 </header>
+
 <body>
     <div>
         <img class="image" src="./Tripura.jpg" >
+        <h2>TRIPURA</h2>
         <p class="text-wrap">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium quaerat repellat molestias expedita culpa doloremque eaque provident explicabo asperiores incidunt minus, magnam beatae repudiandae praesentium rem voluptatem. Odit nesciunt ducimus deserunt illo dolorum rerum aliquid?
-        </p>
+            Tripura is a cultural reservoir among all the north-eastern states of India. Heritage and historical sites, temples going back hundreds of years, wildlife destinations and a thriving arts and crafts industry, these are the most popular tourism attractions in Tripura. Those looking for biodiversity hotspots during their Tripura holidays will not be disappointed, this state has plenty of those. Tripura is one of those travel destinations in India that attract families, friends, couples and solo travellers.<br><br>
+            Capital: Agartala <br><br>
+            Top places to visit in Tripura: -<br><br>
+            Agartala<br>
+            Melaghar<br>
+            Dharamnagar<br>
+            Ambassa<br>
+            Pilak<br>
+            Devtamura<br>
+            Kumarghat<br><br>
+            Top recreational activities to explore in Tripura :-<br><br>
+            Ujjyanta Palace<br>
+            Neermahal<br>
+            Rudrasagar lake<br>
+            Unakoti<br>
+            Trishna wild life<br><br>
+            </p>
     </div>
+    <script>
+        function toggleMenu() {
+            let getMenu = document.querySelector(".menu-item");
+            getMenu.classList.toggle("hamburger");
+        }
+
+        let getHamburger = document.querySelector("#toggle-bar");
+
+        getHamburger.addEventListener("click", toggleMenu);
+    </script>
 </body>
 
 <footer>
