--- a/West Bengal.html
+++ b/West Bengal.html
@@ -9,22 +9,55 @@
     <title>West Bengal</title>
 </head>
 <header class="nav-bar">
-    <span>
-        <a href="./index.html"> <h1>Explore India</h1></a>
-    </span>
     <nav>
-        <a id="nav-item" href="./About.html">About</a>
-        <a id="nav-item" href="#contact">Contact</a>
-        <a id="nav-item" href="./index.html">Home</a>
+        <a href="./index.html" id="toplogo">
+            <h1>Explore India</h1>
+        </a>
+        <div class="hamIcon">
+            <h1 id="toggle-bar">&#9776;</h1>
+        </div>
+        <ul class="menu-item">
+            <li><a class="nav-item" href="./About.html">About</a></li>
+            <li><a class="nav-item" href="#contact">Contact</a></li>
+            <li><a class="nav-item" href="./index.html">Home</a></li>
+        </ul>
     </nav>
 </header>
+
 <body>
     <div>
         <img class="image" src="./WB.jpg" >
+        <h2>WEST BENGAL</h2>
         <p class="text-wrap">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium quaerat repellat molestias expedita culpa doloremque eaque provident explicabo asperiores incidunt minus, magnam beatae repudiandae praesentium rem voluptatem. Odit nesciunt ducimus deserunt illo dolorum rerum aliquid?
-        </p>
+            West Bengal offers a colorful variety of experiences to the tourist. Its capital, Kolkata, is as cosmopolitan a city as any. In close proximity lie the Sundarbans, a UNESCO World Heritage Site which is home to the Royal Bengal Tiger. Coastal areas like Digha and Mandarmani are popular tourism places in this state which attract their fair share of beach lovers. A different travel experience awaits you in places like Bishnupur, Bankura and Shantiniketan, which showcase the rich cultural heritage of the state. Hill stations like Darjeeling, Kalimpong and Labha are exciting getaways from the plains and are known for their distinct culture and lifestyle. Wildlife sanctuaries like Jaldapara and Gorumara draw your attention to its rich wildlife. In pilgrimage destinations like Dakshineswar and Kalighat, you undergo a profound spiritual experience.<br><br>
+            Capital: Kolkata<br><br>
+            Top places to visit in West Bengal : -<br><br>
+            Kolkata<br>
+            Silliguri<br>
+            Darjeeling<br>
+            Jalpaiguri<br>
+            Minadpore<br>
+            Howrah<br><br>
+            Top recreational activities to explore in West Bengal: -<br><br>
+            Victoria Memorial Hall<br>
+            Digha Beach<br>
+            Sundarbans<br>
+            Howrah Bridge<br>
+            Salt lake<br>
+            Mandarmani beach<br><br>
+            
+             </p>
     </div>
+    <script>
+        function toggleMenu() {
+            let getMenu = document.querySelector(".menu-item");
+            getMenu.classList.toggle("hamburger");
+        }
+
+        let getHamburger = document.querySelector("#toggle-bar");
+
+        getHamburger.addEventListener("click", toggleMenu);
+    </script>
 </body>
 
 <footer>
