--- a/goa.html
+++ b/goa.html
@@ -1,42 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="webpagestyle.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Goa</title>
 </head>
 <header class="nav-bar">
-    <span>
-        <a href="./index.html"> <h1>Explore India</h1></a>
-    </span>
     <nav>
-        <a id="nav-item" href="./About.html">About</a>
-        <a id="nav-item" href="#contact">Contact</a>
-        <a id="nav-item" href="./index.html">Home</a>
+        <a href="./index.html" id="toplogo">
+            <h1>Explore India</h1>
+        </a>
+        <div class="hamIcon">
+            <h1 id="toggle-bar">&#9776;</h1>
+        </div>
+        <ul class="menu-item">
+            <li><a class="nav-item" href="./About.html">About</a></li>
+            <li><a class="nav-item" href="#contact">Contact</a></li>
+            <li><a class="nav-item" href="./index.html">Home</a></li>
+        </ul>
     </nav>
 </header>
+
 <body>
     <div>
-        <img class="image" src="./goa.jpg" >
+        <img class="image" src="./goa.jpg">
+        <h2>GOA</h2>
         <p class="text-wrap">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium quaerat repellat molestias expedita culpa doloremque eaque provident explicabo asperiores incidunt minus, magnam beatae repudiandae praesentium rem voluptatem. Odit nesciunt ducimus deserunt illo dolorum rerum aliquid?
+
+            Deck up your itinerary list with the spectacular places in Goa and get ready to be awe-struck with its
+            surprises. Serving as the hot spot for vacationists from both near and far, Goa is all in all a place for
+            the party animals and solace seekers alike. From the ravishing nightlife pubs to the ever fantastic beaches
+            there is something for everyone. Apart from this, one must not dare to miss out on the Goan churches which
+            not only cater to ultimate tranquillity but also exhibit the architecture of the colonial period.
+
+            <br><br>
+            Baga Beach, Calangute Beach, Grand Island, Dudhsagar Waterfalls, Fort Aguada, Candolim Beach, Tito's Street,
+            Arambol Beach, Bom Jesus Basilica, Palolem Beach, Curlies, Club Cubana, Anjuna Flea Market, Chapora Fort,
+            Mapusa Friday Market, Divar Island, Salim Ali Bird Sanctuary and many more. Whether you are touring the
+            place with your bunch of buddies or family, there is no dearth of options and you can explore the places
+            that you like.<br><br>
+            Capital: -Panaji<br><br>
+            Top places to explore in Goa: -<br><br>
+            Grande Island<br>
+            Panjim<br>
+            Bardez<br>
+            Calangute<br>
+            Canacona<br>
+            Marago<br>
+            Anjuna<br>
+            Old goa<br>
+            Ponda<br><br>
+            Top recreational activities to explore in Goa: -<br><br>
+
+            Calangute Beach<br>
+            Baga Beach<br>
+            Tito's Street<br>
+            Anjuna Beach<br>
+            Dudhsagar Waterfalls<br>
+            Fort Aguada<br>
+            Snorkeling<br>
+            Parasailing<br>
+            Scuba Diving<br>
+            The Church of Our Lady of Immaculate Conception<br>
+            Bom Jesus Basilica<br>
+            Bondla Wildlife Sanctuary<br>
+            Lamgau Caves<br><br>
+
+
+
+
         </p>
     </div>
+
+    <script>
+        function toggleMenu() {
+            let getMenu = document.querySelector(".menu-item");
+            getMenu.classList.toggle("hamburger");
+        }
+
+        let getHamburger = document.querySelector("#toggle-bar");
+
+        getHamburger.addEventListener("click", toggleMenu);
+    </script>
 </body>
 
 <footer>
 
     <div id="contact" class="bottom">
         <ul>
-            <li class="facebook"><a href="https://www.facebook.com/ankitraj.srivastava.710/"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-            <li class="instagram"><a href="https://www.instagram.com/awesome_ars/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-            <li class="github"><a href="https://github.com/Ankit-0212"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
-            <li class="linkedin"><a href="https://www.linkedin.com/in/ankit-raj-srivastava-1a93241a0"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/ankitraj.srivastava.710/"><i
+                        class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+            <li class="instagram"><a href="https://www.instagram.com/awesome_ars/"><i class="fa fa-instagram fa-2x"
+                        aria-hidden="true"></i></a></li>
+            <li class="github"><a href="https://github.com/Ankit-0212"><i class="fa fa-github fa-2x"
+                        aria-hidden="true"></i></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/in/ankit-raj-srivastava-1a93241a0"><i
+                        class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
             <p id="bottom-text">Designed by :- Ankit Raj Srivastava</p>
         </ul>
     </div>
 </footer>
+
 </html>
