--- a/madhyapradesh.html
+++ b/madhyapradesh.html
@@ -1,42 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="webpagestyle.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Madhya Pradesh</title>
 </head>
 <header class="nav-bar">
-    <span>
-        <a href="./index.html"> <h1>Explore India</h1></a>
-    </span>
     <nav>
-        <a id="nav-item" href="./About.html">About</a>
-        <a id="nav-item" href="#contact">Contact</a>
-        <a id="nav-item" href="./index.html">Home</a>
+        <a href="./index.html" id="toplogo">
+            <h1>Explore India</h1>
+        </a>
+        <div class="hamIcon">
+            <h1 id="toggle-bar">&#9776;</h1>
+        </div>
+        <ul class="menu-item">
+            <li><a class="nav-item" href="./About.html">About</a></li>
+            <li><a class="nav-item" href="#contact">Contact</a></li>
+            <li><a class="nav-item" href="./index.html">Home</a></li>
+        </ul>
     </nav>
 </header>
+
 <body>
     <div>
         <img class="image" src="./MP.jpg">
+        <h2>MADHYA PRADESH</h2>
         <p class="text-wrap">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium quaerat repellat molestias expedita culpa doloremque eaque provident explicabo asperiores incidunt minus, magnam beatae repudiandae praesentium rem voluptatem. Odit nesciunt ducimus deserunt illo dolorum rerum aliquid?
+            Welcome to the heart of India, Madhya Pradesh, a state which exudes timelessness in every way. The exotic
+            land is an intoxicating mixture of rich history, vibrant sights, awe inspiring art and shrines. From north
+            to south, east to west, Madhya Pradesh is adorned with beautiful tourist attractions. On the state's rugged
+            northern side, there are the famous temples of Khajuraho. Never before was sensuality and spirituality
+            depicted as artistically as here. Two of India's most famous wildlife sanctuaries- Kanha and Bandhavgarh are
+            embracing the state's area. Towards the southwest are the Buddhist stupas of Sanchi and 15th-century
+            citadels of Mandu. Madhya Pradesh tourism offers you a wonderful mix of nature, heritage, wildlife and
+            spirituality.<br><br>
+            The state shares its borders with 6 states of India – Chhattisgarh towards south-east, south-west border
+            touches "Maharashtra", western border touches "Gujarat", north-west border touches "Rajasthan", and
+            north-east border touches "Uttar Pradesh".<br><br>
+            Capital: -Bhopal<br><br>
+            Top places to visit in Madhya Pradesh: -<br><br>
+            Khajuraho<br>
+            Bandhavgarh<br>
+            Bhopal<br>
+            Jabalpur<br>
+            Gwalior<br>
+            Sanchi<br>
+            Amarkantak<br>
+            Indore<br>
+            Chanderi<br><br>
+            Top recreational activities to explore in Madhya Pradesh: -<br><br>
+            Bandhavgarh National Park<br>
+            Pench National Park<br>
+            Sanchi Stupa<br>
+            Gwalior Fort<br>
+            Temples in Khajuraho<br>
+
+            Lal Bagh Palace, Indore<br>
+            Moti Mahal, Gwalior<br>
+            Bhimbetka Caves<br><br>
         </p>
     </div>
+    <script>
+        function toggleMenu() {
+            let getMenu = document.querySelector(".menu-item");
+            getMenu.classList.toggle("hamburger");
+        }
+
+        let getHamburger = document.querySelector("#toggle-bar");
+
+        getHamburger.addEventListener("click", toggleMenu);
+    </script>
 </body>
 
 <footer>
 
     <div id="contact" class="bottom">
         <ul>
-            <li class="facebook"><a href="https://www.facebook.com/ankitraj.srivastava.710/"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-            <li class="instagram"><a href="https://www.instagram.com/awesome_ars/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-            <li class="github"><a href="https://github.com/Ankit-0212"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
-            <li class="linkedin"><a href="https://www.linkedin.com/in/ankit-raj-srivastava-1a93241a0"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/ankitraj.srivastava.710/"><i
+                        class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+            <li class="instagram"><a href="https://www.instagram.com/awesome_ars/"><i class="fa fa-instagram fa-2x"
+                        aria-hidden="true"></i></a></li>
+            <li class="github"><a href="https://github.com/Ankit-0212"><i class="fa fa-github fa-2x"
+                        aria-hidden="true"></i></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/in/ankit-raj-srivastava-1a93241a0"><i
+                        class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
             <p id="bottom-text">Designed by :- Ankit Raj Srivastava</p>
         </ul>
     </div>
 </footer>
+
 </html>
